--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="/xchange-bitstamp"/>
 	<classpathentry kind="src" path="/xchange-bitvc"/>
+	<classpathentry kind="lib" path="C:/cygwin/home/ShannonCode/repo/__RazorMind/rest_lib/mysql-connector-java-5.1.34-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
