--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+        
                 
         <!--<dependency>
           <groupId>com.xeiam.xchange</groupId>
