--- a/simple-service/.classpath
+++ b/simple-service/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="build/rest_lib/xchange-core-2.2.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/aopalliance-repackaged-2.3.0-b05.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/commons-io-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/hk2-api-2.3.0-b05.jar"/>
@@ -35,10 +34,6 @@
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/slf4j-api-1.7.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/sqlite-jdbc-3.8.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry exported="true" kind="lib" path="build/rest_lib/xchange-bitfinex-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="build/rest_lib/xchange-bitstamp-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="build/rest_lib/xchange-bitvc-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="build/rest_lib/xchange-okcoin-2.2.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/fest-assert-core-2.0M10.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/fest-util-1.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/grizzly-framework-2.3.8.jar"/>
@@ -47,11 +42,6 @@
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/gson-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/rest_lib/jackson-annotations-2.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Development/metaliquid/xchange-bitfinex-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Development/metaliquid/xchange-bitstamp-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Development/metaliquid/xchange-bitvc-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Development/metaliquid/xchange-okcoin-2.2.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Development/metaliquid/mysql-connector-java-5.0.8-bin.jar"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -63,5 +53,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/xchange-bitfinex-2.2.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/xchange-bitstamp-2.2.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/xchange-bitvc-2.2.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/xchange-okcoin-2.2.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/metaliquid/simple-service/xchange-core-2.2.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
